...
            "state": "translated",
            "value": "連線至另一部電腦"
          }
        }
      }
    },
    "Connect computer": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Conectar computador"
          }
...
            "state": "translated",
            "value": "即時通話期間已暫停語音預覽。"
          }
        }
      }
    },
    "This computer is offline.": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Este computador está offline."
          }
...
